--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Arclight Agency - Services</title>
-    <meta content="Arclight is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand." name="description"/>
+    <meta content="Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand." name="description"/>
     <meta content="Arclight Agency - Services" property="og:title" />
     <!-- <meta content="Sense is an easy to use webflow template for your startup. Sense features a clean and modern design, with ample space for showcasing your products or services, as well as highlighting your team, mission, and vision." property="og:description"/> -->
     <!-- <meta content="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/6399c20dc27c3d68da88ddb9_Frame%20134-min.jpg" property="og:image"/> -->
@@ -89,10 +89,10 @@
                                         <a href="services" class="navbar-link w-nav-link">Services</a>
                                         <!-- <a href="testimonials" class="navbar-link w-nav-link">Testimonials</a> -->
                                         <!-- <a href="case-study" class="navbar-link w-nav-link">Case Study</a> -->
-                                        <a href="https://aisolarsystems.co/calendar-1755" class="button navbar-button hide-desktop w-button">Book a Call</a>
+                                        <a href="https://arclighta.info/calendar-8669" class="button navbar-button hide-desktop w-button">Book a Call</a>
                                     </div>
                                 </nav>
-                                <div class="navbar-buttons-wrapper"><a href="https://aisolarsystems.co/calendar-1755"
+                                <div class="navbar-buttons-wrapper"><a href="https://arclighta.info/calendar-8669"
                                         class="button navbar-button hide-tablet w-button">Book a Call</a></div>
                                 <div class="navbar-menu-button w-nav-button" style="-webkit-user-select: text;"
                                     aria-label="menu" role="button" tabindex="0" aria-controls="w-nav-overlay-0"
@@ -127,7 +127,7 @@
                                     <div class="margin-bottom margin-small">
                                         <h1>Our Services</h1>
                                     </div>
-                                    <div>Running your solar business can be challenging, but we're here to simplify the process, speed up growth, and add some excitement. Our software is specifically designed to rapidly scale solar businesses and achieve success.</div>
+                                    <div>Running your business can be challenging, but we're here to simplify the process, speed up growth, and add some excitement. Our software is specifically designed to rapidly scale businesses and achieve success.</div>
                                 </div>
                                 <div class="cards-grid">
                                     <div id="w-node-_44ee4bdd-18c7-67cd-7a21-fb37d732578a-d732577c" class="cards-item" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
@@ -135,10 +135,10 @@
                                             <img src="https://img.icons8.com/material-rounded/96/null/bullish.png" loading="lazy" alt="" class="card-item-icon">
                                         </div>
                                         <div class="margin-bottom margin-medium">
-                                            <h3>A.I. Solar System Software</h3>
+                                            <h3>Arclight A.I. CRM Software</h3>
                                         </div>
                                         <div class="margin-bottom margin-medium">
-                                            <div>Our state of the art software for solar contractors that books appointments on autopilot, generates and vets leads, and includes an automated CRM platform powered by A.I.</div>
+                                            <div>Our state of the art database for construction businesses that books appointments on autopilot, generates and vets leads, and includes an automated CRM platform powered by A.I.</div>
                                         </div>
                                         <!-- <a href="services" class="link white w-inline-block" style="">
                                             <div>Learn more</div>
@@ -154,7 +154,7 @@
                                             <h3>Automated CRM &amp; Lead Nurturing</h3>
                                         </div>
                                         <div class="margin-bottom margin-medium">
-                                            <div>The A.I Solar System includes an automated CRM platform that initiates conversations with leads that opt in to nurture them before connecting them with sales reps who then attend pre-set appointments and close the deal.</div>
+                                            <div>The Arclight A.I CRM includes an automations that will initiate conversations with leads that opt in to nurture them before connecting them with sales reps who then attend pre-set appointments and close the deal.</div>
                                         </div>
                                         <!-- <a href="#" class="link white w-inline-block" style="">
                                             <div>Learn more</div>
@@ -170,7 +170,7 @@
                                             <h3>Short-Form Video Ads</h3>
                                         </div>
                                         <div class="margin-bottom margin-medium">
-                                            <div>A.I Solar System includes video ads to generate leads and drive them through a sales funnel, and set up ad campaigns for clients through TikTok.</div>
+                                            <div>Arclight A.I. CRM  includes video ads to generate leads and drive them through a sales funnel, and set up ad campaigns for clients through TikTok.</div>
                                         </div>
                                         <!-- <a href="services" class="link white w-inline-block" style="">
                                             <div>Learn more</div>
@@ -180,7 +180,7 @@
                                     </div>
                                     
                                 </div>
-                                <a href="https://aisolarsystems.co/service-packages" class="button w-button">Get Started</a>
+                                <a href="https://arclighta.info/crm" class="button w-button">Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -283,7 +283,7 @@
                                                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                                         </div>
                                         <div class="faq-answer" style="height: 0px;">
-                                            <div>We are excited to announce that we are now offering a 7-day free trial! While it's not feasible to offer free trials to everyone indefinitely, we understand that trying our software before committing to a purchase is important. Therefore, we've allocated the necessary time and resources to offer this trial period, and we hope it helps you make an informed decision about our services.</div>
+                                            <div>Unfortunately, it's not feasible to offer free trials.</div>
                                         </div>
                                     </div>
                                     <div class="faq-item"
@@ -372,7 +372,7 @@
                                         <div class="margin-bottom margin-large">
                                             <div>Schedule a call with us to get started</div>
                                         </div>
-                                        <a href="https://aisolarsystems.co/calendar-1755" class="button white-bg w-button">Book a Call</a>
+                                        <a href="https://arclighta.info/calendar-8669" class="button white-bg w-button">Book a Call</a>
                                     </div>
                                     <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637b654b69bf649945444efb_Ellipse%20569.png"
                                         loading="lazy" alt="" class="cta-main-image-asset" />
@@ -394,8 +394,8 @@
                                     <a href="/" aria-current="page" class="footer-logo w-inline-block w--current">
                                         <img src="assets/logo dark.png" loading="lazy" alt="" class="footer-logo-image"/>
                                     </a>
-                                    <div>Arclight is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand.
-                                        <div style="margin-top: 30px"><a class="footer-link-2" href="mailto:daniel@arclight-agency.com" target="_blank">Email Us</a></div>
+                                    <div>Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand.
+                                        <div style="margin-top: 30px"><a class="footer-link-2" href="mailto:kadian@arclight-agency.com" target="_blank">Email Us</a></div>
 
                                     </div>
                                 
