--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Arclight Agency</title>
-        <meta content="Arclight is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand." name="description"/>
+        <meta content="Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand." name="description"/>
         <meta content="Arclight Agency - Home" property="og:title"/>
         <!-- <meta content="Sense is an easy to use webflow template for your startup. Sense features a clean and modern design, with ample space for showcasing your products or services, as well as highlighting your team, mission, and vision." property="og:description"/> -->
         <!-- <meta content="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/6399c20dc27c3d68da88ddb9_Frame%20134-min.jpg" property="og:image"/> -->
@@ -117,7 +117,7 @@
                                 <div class="home-hero-component">
                                     <div id="w-node-_09707357-6298-b30e-cec5-397665dccf17-f7b0dfa1" class="home-hero-content">
                                         <div style="-webkit-transform:translate3d(null, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="animation-load-1">
-                                            <!-- <div class="tag">The #1 Solar Installation Marketing Agency</div> -->
+                                            <!-- <div class="tag">The #1 Marketing CRM</div> -->
                                         </div>
                                         <div class="margin-bottom margin-medium">
                                             <div style="opacity:0;-webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="animation-load-2">
@@ -125,7 +125,7 @@
                                             </div>
                                         </div>
                                         <div style="opacity:0;-webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="animation-load-3">
-                                            <div>Arclight is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand.</div>
+                                            <div>Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand.</div>
                                         </div>
                                     </div>
                                     <div id="w-node-c9053b85-b2c3-86d4-272e-0759f61d883d-f7b0dfa1" style="opacity:0;-webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="animation-load-4">
@@ -184,7 +184,7 @@
                                         <div class="margin-bottom margin-medium">
                                             <h2>Grow 10x faster, better, smarter</h2>
                                         </div>
-                                        <div>Stop wasting time with trial and error and take a more strategic approach to growing your solar installation business with our proven systems, frameworks, and scientifically-backed customer acquisition techniques (not hopes and prayers).</div>
+                                        <div>Stop wasting time with trial and error and take a more strategic approach to growing your business with our proven systems, frameworks, and scientifically-backed customer acquisition techniques (not hopes and prayers).</div>
                                         <div class="feature-divider-line"></div>
                                         <div class="feature-1-pointers-wrapper">
                                             <div class="feature-1-pointer">
@@ -222,7 +222,7 @@
                                         <div class="margin-bottom margin-small">
                                             <h2>Our Services</h2>
                                         </div>
-                                        <div>Running your solar business can be challenging, but we're here to simplify the process, speed up growth, and add some excitement. Our software is specifically designed to rapidly scale solar businesses and achieve success.</div>
+                                        <div>Running your business can be challenging, but we're here to simplify the process, speed up growth, and add some excitement. Our software is specifically designed to rapidly scale businesses and achieve success.</div>
                                     </div>
                                     <div class="cards-grid">
                                         <div id="w-node-_44ee4bdd-18c7-67cd-7a21-fb37d732578a-d732577c" class="cards-item">
@@ -230,10 +230,10 @@
                                                 <img src="https://img.icons8.com/material-rounded/96/null/bullish.png" loading="lazy" alt="" class="card-item-icon"/>
                                             </div>
                                             <div class="margin-bottom margin-medium">
-                                                <h3>A.I. Solar System Software</h3>
+                                                <h3>Arclight CRM Software</h3>
                                             </div>
                                             <div class="margin-bottom margin-medium">
-                                                <div>Turn-key platform for solar contractors that books appointments on autopilot, generates and vets leads, and includes an automated CRM platform powered by A.I.</div>
+                                                <div>Turn-key platform for businesses that books appointments on autopilot, generates and vets leads, and includes an automated CRM platform powered by A.I.</div>
                                             </div>
                                             <a href="services" class="link white w-inline-block">
                                                 <div>Learn more</div>
@@ -249,7 +249,7 @@
                                                 <h3>Automated CRM & Lead Nurturing</h3>
                                             </div>
                                             <div class="margin-bottom margin-medium">
-                                                <div>The A.I Solar System includes an automated CRM platform that initiates conversations with leads that opt in to nurture them before connecting them with sales reps who call or text to book in the appointment and close the deal.</div>
+                                                <div>The Arclight CRM System includes an A.I. database that initiates conversations with leads that opt in to nurture them before connecting them with sales reps who call or text to book in the appointment and close the deal.</div>
                                             </div>
                                             <a href="services" class="link white w-inline-block">
                                                 <div>Learn more</div>
@@ -265,7 +265,7 @@
                                                 <h3>Short-Form Video Ads</h3>
                                             </div>
                                             <div class="margin-bottom margin-medium">
-                                                <div>A.I Solar System includes video ads to generate leads and drive them through a sales funnel, and set up ad campaigns for clients through TikTok.</div>
+                                                <div>The Arclight CRM will utilize video ads to generate leads and drive them through a sales funnel, and set up ad campaigns for clients through TikTok.</div>
                                             </div>
                                             <a href="services" class="link white w-inline-block">
                                                 <div>Learn more</div>
@@ -527,7 +527,7 @@
                                                 <div class="testimonial-slide-inside">
                                                     <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637db6beeabf2421e9cd000d_Group%201000004279.png" loading="lazy" alt="" class="testimonial-stars-image"/>
                                                     <div class="margin-bottom margin-large">
-                                                        <div>We have been using Arclight for the past few months and have been blown away by the results. Their team of experts provided valuable insights and recommendations that have helped us improve our marketing campaigns. We have seen a significant increase in revenue and would highly recommend Arclight to any solar installation business looking to take their marketing to the next level.</div>
+                                                        <div>We have been using Arclight for the past few months and have been blown away by the results. Their team of experts provided valuable insights and recommendations that have helped us improve our marketing campaigns. We have seen a significant increase in revenue and would highly recommend Arclight to any business looking to take their marketing to the next level.</div>
                                                     </div>
                                                     <div class="testimonial-person-wrapper">
                                                         <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637b654b4f76a7428abe3128_Ellipse%20567.png" loading="lazy" alt="" class="testimonial-person-image"/>
@@ -544,7 +544,7 @@
                                                 <div class="testimonial-slide-inside">
                                                     <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637db6beeabf2421e9cd000d_Group%201000004279.png" loading="lazy" alt="" class="testimonial-stars-image"/>
                                                     <div class="margin-bottom margin-large">
-                                                        <div>We have been working with Arclight for the past few months and have seen a tremendous improvement in our customer satisfaction levels. Their team of experts provided valuable insights and guidance that helped us make important changes to our solar installation processes. We are extremely satisfied with the results and would highly recommend Arclight to any solar provider looking to improve their marketing.</div>
+                                                        <div>We have been working with Arclight for the past few months and have seen a tremendous improvement in our customer satisfaction levels. Their team of experts provided valuable insights and guidance that helped us make important changes to our solar installation processes. We are extremely satisfied with the results and would highly recommend Arclight to any business looking to improve their marketing & client management.</div>
                                                     </div>
                                                     <div class="testimonial-person-wrapper">
                                                         <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637b654b4f76a7345fbe3129_Ellipse%20567-2.png" loading="lazy" alt="" class="testimonial-person-image"/>
@@ -687,7 +687,7 @@
                                         <a href="/" aria-current="page" class="footer-logo w-inline-block w--current">
                                             <img src="assets/logo dark.png" loading="lazy" alt="" class="footer-logo-image"/>
                                         </a>
-                                        <div>Arclight is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand.</div>
+                                        <div>Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand.</div>
                                         <div style="margin-top: 30px"><a class="footer-link-2" href="mailto:daniel@arclight-agency.com" target="_blank">Email Us</a></div>
                                     </div>
                                     <div class="footer-columns-container">
