--- a/contact.html
+++ b/contact.html
@@ -198,10 +198,10 @@
                                         </div>
                                         <div id="w-node-f0fa3338-e174-7858-5f88-9069a25483c9-a25483a1" class="footer-column">
                                             <div class="footer-column-heading">Social Media</div>
-                                            <a href="https://www.linkedin.com/company/arclightco/" class="footer-link">LinkedIn</a>
+                                            <a href="https://www.linkedin.com/company/arclighta/" class="footer-link">LinkedIn</a>
                                             <a href="https://www.facebook.com/arclighta" class="footer-link">Facebook</a>
                                             <a href="https://www.instagram.com/arclighta/" class="footer-link">Instagram</a>
-                                            <a href="https://twitter.com/ArclightAgency" class="footer-link">Twitter</a>
+                                            <a href="https://twitter.com/arclightaa" class="footer-link">Twitter</a>
                                         </div>
                                     </div>
                                 </div>
