--- a/about.html
+++ b/about.html
@@ -543,7 +543,7 @@
                                         company's online growth potential and creating the perfect marketing
                                         strategy for your brand.
                                         <div style="margin-top: 30px"><a class="footer-link-2"
-                                                href="mailto:daniel@arclight-agency.com" target="_blank">Email Us</a>
+                                                href="mailto:info@arclighta.com" target="_blank">Email Us</a>
                                         </div>
                                     </div>
                                 </div>
@@ -582,7 +582,7 @@
                             </div>
                             <div class="footer-down">
                                 <div class="footer-copyright-text">
-                                    Copyright © 2023 Arclight Agency.
+                                    Copyright © 2023 Arclight Co.
                                      
                                 </div>
                                 <div class="social-links-container">
