--- a/services.html
+++ b/services.html
@@ -424,13 +424,13 @@
                                         <a href="https://www.linkedin.com/company/arclighta/" class="footer-link">LinkedIn</a>
                                         <a href="https://www.facebook.com/arclighta" class="footer-link">Facebook</a>
                                         <a href="https://www.instagram.com/arclighta/" class="footer-link">Instagram</a>
-                                        <a href="https://twitter.com/Arclight_co" class="footer-link">Twitter</a>
+                                        <a href="https://twitter.com/Arclightaa" class="footer-link">Twitter</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="footer-down">
                                 <div class="footer-copyright-text">
-                                    Copyright © 2023 Arclight Agency.
+                                    Copyright © 2023 Arclight Co.
                                 </div>
                                 <div class="social-links-container">
                                     <a href="https://www.linkedin.com/company/arclighta/" target="_blank" class="social-link-item w-inline-block">
