--- a/services.html
+++ b/services.html
@@ -395,7 +395,7 @@
                                         <img src="assets/logo dark.png" loading="lazy" alt="" class="footer-logo-image"/>
                                     </a>
                                     <div>Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand.
-                                        <div style="margin-top: 30px"><a class="footer-link-2" href="mailto:kadian@arclight-agency.com" target="_blank">Email Us</a></div>
+                                        <div style="margin-top: 30px"><a class="footer-link-2" href="mailto:info@arclighta.com" target="_blank">Email Us</a></div>
 
                                     </div>
                                 
