--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <html data-wf-domain="" data-wf-page="63787459a77f8c14f7b0dfa1" data-wf-site="63787459a77f8c1ad0b0df9e" data-wf-status="1">
     <head>
         <meta charset="utf-8"/>
-        <title>Arclight Agency</title>
+        <title>Arclight Co.</title>
         <meta content="Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand." name="description"/>
-        <meta content="Arclight Agency - Home" property="og:title"/>
+        <meta content="Arclight Co. - Home" property="og:title"/>
         <!-- <meta content="Sense is an easy to use webflow template for your startup. Sense features a clean and modern design, with ample space for showcasing your products or services, as well as highlighting your team, mission, and vision." property="og:description"/> -->
         <!-- <meta content="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/6399c20dc27c3d68da88ddb9_Frame%20134-min.jpg" property="og:image"/> -->
         <!-- <meta content="Home | Sense - Webflow HTML Website Template" property="twitter:title"/> -->
