--- a/services.html
+++ b/services.html
@@ -180,7 +180,7 @@
                                     </div>
                                     
                                 </div>
-                                <a href="https://arclighta.info/medspa-services" class="button w-button">Get Started</a>
+                                <a href="https://arclighta.info/services-page" class="button w-button">Get Started</a>
                             </div>
                         </div>
                     </div>
