--- a/about.html
+++ b/about.html
@@ -496,7 +496,7 @@
                                             <div class="link-line white"></div>
                                         </a> -->
                                     </div>
-                                </div><a href="https://arclighta.info/bodyblend-ai" class="button w-button">Get Started</a>
+                                </div><a href="https://arclighta.info/services-page" class="button w-button">Get Started</a>
                             </div>
                         </div>
                     </div>
