--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                         </div>
                                         
                                     </div>
-                                    <a href="https://arclighta.info/bodyblend-ai" class="button w-button">Get Started</a>
+                                    <a href="https://arclighta.info/services-page" class="button w-button">Get Started</a>
                                 </div>
                             </div>
                         </div>
