--- a/services.html
+++ b/services.html
@@ -138,7 +138,7 @@
                                             <h3>Arclight A.I. CRM Software</h3>
                                         </div>
                                         <div class="margin-bottom margin-medium">
-                                            <div>Our state of the art database for construction businesses that books appointments on autopilot, generates and vets leads, and includes an automated CRM platform powered by A.I.</div>
+                                            <div>Our state of the art database for local businesses that books appointments on autopilot, generates and vets leads, and includes an automated CRM platform powered by A.I.</div>
                                         </div>
                                         <!-- <a href="services" class="link white w-inline-block" style="">
                                             <div>Learn more</div>
@@ -283,7 +283,7 @@
                                                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                                         </div>
                                         <div class="faq-answer" style="height: 0px;">
-                                            <div>Unfortunately, it's not feasible to offer free trials.</div>
+                                            <div>We do have a special one-month test drive for our system. Book a call to learn more about it!.</div>
                                         </div>
                                     </div>
                                     <div class="faq-item"
