--- a/services.html
+++ b/services.html
@@ -154,7 +154,7 @@
                                             <h3>Automated CRM &amp; Lead Nurturing</h3>
                                         </div>
                                         <div class="margin-bottom margin-medium">
-                                            <div>The Arclight A.I CRM includes an automations that will initiate conversations with leads that opt in to nurture them before connecting them with sales reps who then attend pre-set appointments and close the deal.</div>
+                                            <div>The Arclight A.I CRM includes automations that will initiate conversations with leads that opt in to nurture them before connecting them with sales reps who then attend pre-set appointments and close the deal.</div>
                                         </div>
                                         <!-- <a href="#" class="link white w-inline-block" style="">
                                             <div>Learn more</div>
@@ -170,7 +170,7 @@
                                             <h3>Short-Form Video Ads</h3>
                                         </div>
                                         <div class="margin-bottom margin-medium">
-                                            <div>Arclight A.I. CRM  includes video ads to generate leads and drive them through a sales funnel, and set up ad campaigns for clients through TikTok.</div>
+                                            <div>Arclight A.I. CRM  includes video ads to generate leads and drive them through a sales funnel, and set up ad campaigns for clients through Facebook and TikTok.</div>
                                         </div>
                                         <!-- <a href="services" class="link white w-inline-block" style="">
                                             <div>Learn more</div>
