--- a/privacy.html
+++ b/privacy.html
@@ -362,7 +362,7 @@
                                                 <!----><!---->
                                                 <div class="paragraph-iP5v9v3qc0 text-output cparagraph-iP5v9v3qc0 none noBorder radius0 none">
                                                     <div>
-                                                        <p>You may access, correct, update, and/or delete any personally-identifiable information that you submit to the web site. You may also unsubscribe from mailing lists or any registrations on the web site. To do so, please either follow instructions on the page of the web site on which you have provided such information or subscribed or registered or contact us at support@arclight-agency.].</p>
+                                                        <p>You may access, correct, update, and/or delete any personally-identifiable information that you submit to the web site. You may also unsubscribe from mailing lists or any registrations on the web site. To do so, please either follow instructions on the page of the website on which you have provided such information or subscribed or registered or contact us at support@arclighta.com].</p>
                                                         <p></p>
                                                     </div>
                                                 </div>
@@ -403,7 +403,7 @@
                                                 <!----><!---->
                                                 <div class="paragraph-0UKqOwRXIp text-output cparagraph-0UKqOwRXIp none noBorder radius0 none">
                                                     <div>
-                                                        <p>Arclight Co. reserves the right to modify this statement at any time. Any changes to this Privacy Policy will be listed in this section, and if such changes are material, a notice will be included on the homepage of the web site for a period of time. If you have any questions about privacy at any websites operated by Arclight Co. or about our website practices, please contact us at: [support@arclight-agency.com]</p>
+                                                        <p>Arclight Co. reserves the right to modify this statement at any time. Any changes to this Privacy Policy will be listed in this section, and if such changes are material, a notice will be included on the homepage of the web site for a period of time. If you have any questions about privacy at any websites operated by Arclight Co. or about our website practices, please contact us at: [support@arclighta.com]</p>
                                                     </div>
                                                 </div>
                                                 <!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!---->
@@ -428,7 +428,7 @@
                                             <img src="assets/logo dark.png" loading="lazy" alt="" class="footer-logo-image"/>
                                         </a>
                                         <div>Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand.</div>
-                                        <div style="margin-top: 30px"><a class="footer-link-2" href="mailto:daniel@arclight-agency.com" target="_blank">Email Us</a></div>
+                                        <div style="margin-top: 30px"><a class="footer-link-2" href="mailto:info@arclighta.com" target="_blank">Email Us</a></div>
                                     </div>
                                     <div class="footer-columns-container">
                                         <div id="w-node-f0fa3338-e174-7858-5f88-9069a25483ad-a25483a1" class="footer-column">
