--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                                             <img src="assets/logo dark.png" loading="lazy" alt="" class="footer-logo-image"/>
                                         </a>
                                         <div>Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand.</div>
-                                        <div style="margin-top: 30px"><a class="footer-link-2" href="mailto:daniel@arclight-agency.com" target="_blank">Email Us</a></div>
+                                        <div style="margin-top: 30px"><a class="footer-link-2" href="mailto:info@arclighta.com" target="_blank">Email Us</a></div>
                                     </div>
                                     <div class="footer-columns-container">
                                         <div id="w-node-f0fa3338-e174-7858-5f88-9069a25483ad-a25483a1" class="footer-column">
