--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,15 @@
 <!-- Last Published: Fri Jan 20 2023 23:01:08 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="" data-wf-page="63787459a77f8c14f7b0dfa1" data-wf-site="63787459a77f8c1ad0b0df9e" data-wf-status="1">
     <head>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9096RWLL8K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9096RWLL8K');
+</script>
         <meta charset="utf-8"/>
         <title>Arclight Co. - Contact</title>
         <meta content="Arclight is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand." name="description"/>
