--- a/services.html
+++ b/services.html
@@ -5,6 +5,15 @@
     data-wf-status="1">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9096RWLL8K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9096RWLL8K');
+</script>
     <meta charset="utf-8" />
     <title>Arclight Co. - Services</title>
     <meta content="Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand." name="description"/>
