--- a/about.html
+++ b/about.html
@@ -4,14 +4,14 @@
     data-wf-site="63787459a77f8c1ad0b0df9e" data-wf-status="1">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9096RWLL8K"></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MXN1N5RYM7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-9096RWLL8K');
+  gtag('config', 'G-MXN1N5RYM7');
 </script>
     <meta charset="utf-8" />
     <title>Arclight Co. - About</title>
