--- a/terms.html
+++ b/terms.html
@@ -3,14 +3,14 @@
 <!-- Last Published: Fri Jan 20 2023 23:01:08 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="" data-wf-page="63787459a77f8c14f7b0dfa1" data-wf-site="63787459a77f8c1ad0b0df9e" data-wf-status="1">
     <head>
-        <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9096RWLL8K"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MXN1N5RYM7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-9096RWLL8K');
+  gtag('config', 'G-MXN1N5RYM7');
 </script>
         <meta charset="utf-8"/>
         <title>Arclight Co. - Terms & Conditions</title>
