--- a/services.html
+++ b/services.html
@@ -98,10 +98,10 @@
                                         <a href="services" class="navbar-link w-nav-link">Services</a>
                                         <!-- <a href="testimonials" class="navbar-link w-nav-link">Testimonials</a> -->
                                         <!-- <a href="case-study" class="navbar-link w-nav-link">Case Study</a> -->
-                                        <a href="https://arclighta.info/calendar-8669" class="button navbar-button hide-desktop w-button">Book a Call</a>
+                                        <a href="https://arclighta.info/calendar" class="button navbar-button hide-desktop w-button">Book a Call</a>
                                     </div>
                                 </nav>
-                                <div class="navbar-buttons-wrapper"><a href="https://arclighta.info/calendar-8669"
+                                <div class="navbar-buttons-wrapper"><a href="https://arclighta.info/calendar"
                                         class="button navbar-button hide-tablet w-button">Book a Call</a></div>
                                 <div class="navbar-menu-button w-nav-button" style="-webkit-user-select: text;"
                                     aria-label="menu" role="button" tabindex="0" aria-controls="w-nav-overlay-0"
@@ -381,7 +381,7 @@
                                         <div class="margin-bottom margin-large">
                                             <div>Schedule a call with us to get started</div>
                                         </div>
-                                        <a href="https://arclighta.info/calendar-8669" class="button white-bg w-button">Book a Call</a>
+                                        <a href="https://arclighta.info/calendar" class="button white-bg w-button">Book a Call</a>
                                     </div>
                                     <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637b654b69bf649945444efb_Ellipse%20569.png"
                                         loading="lazy" alt="" class="cta-main-image-asset" />
