--- a/services.html
+++ b/services.html
@@ -469,6 +469,9 @@
         type="text/javascript"></script>
     <!-- <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script> -->
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+     <!-- Chat Widget -->
+    <chat-widget location-id="NmtNKrSqFM5mK44CemR9" agency-name="Arclight Co." agency-website="https://arclighta.com/" locale="en-us" ></chat-widget>
+    <script src="https://widgets.leadconnectorhq.com/loader.js" data-resources-url="https://widgets.leadconnectorhq.com/chat-widget/loader.js" ></script>
 </body>
 
 </html>
